tests/negative/neg_pr113_mixed_constraints.safe
package Neg_PR113_Mixed_Constraints
   type Packet (Active : Boolean = True, Kind : Character = 'A', Count : Integer = 0) is
      record
         Value : Integer;

   P : Packet (True, Kind = 'A', Count = 1) = (Value = 1);

